--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.5.0",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "5.5.2",
     "@radix-ui/react-label": "^2.0.2",
