Add simple login / auth

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+AUTH_SECRET=/69oo71f/CHr5rHhkLGpG6moTRx48gOfGBCP8lZ2XPY=
+AUTH_URL=http://localhost:3000/api/auth
